[package]
name = "yakvdb"
version = "0.0.0"
edition = "2018"
authors = ["sergey-melnychuk"]
description = "Yet Another Kev-Value DataBase"
license = "MIT"
homepage = "https://github.com/sergey-melnychuk/yakvdb"
repository = "https://github.com/sergey-melnychuk/yakvdb"
documentation = "https://github.com/sergey-melnychuk/yakvdb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bytes = "1"
rand = "0.8.0"

