[package]
name = "yakvdb"
version = "0.3.0"
edition = "2018"
authors = ["sergey-melnychuk"]
description = "Yet Another Kev-Value DataBase"
license = "MIT"
homepage = "https://github.com/sergey-melnychuk/yakvdb"
repository = "https://github.com/sergey-melnychuk/yakvdb"
documentation = "https://github.com/sergey-melnychuk/yakvdb"

[profile.release]
debug = true

[dependencies]
bytes = "1"
rand = "0.8.0"
log = "0.4"
env_logger = "0.9.0"
sled = "0.34.7"
rusqlite = "0.28.0"
