[package]
name = "yakvdb"
version = "0.6.2"
edition = "2018"
authors = ["sergey-melnychuk"]
description = "Yet Another Kev-Value DataBase"
license = "MIT"
homepage = "https://github.com/sergey-melnychuk/yakvdb"
repository = "https://github.com/sergey-melnychuk/yakvdb"
documentation = "https://github.com/sergey-melnychuk/yakvdb"

[features]
default = ["typed"]
typed = ["dep:anyhow"]

[profile.release]
debug = true

[dependencies]
bytes = "1"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
anyhow = { version = "1", optional = true }
yalskv = "0.1.0"

[dev-dependencies]
sled = "0.34.7"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "sync", "macros"] }
hex = "0.4.3"
